cedar-lean/UnitTest/parser_tests/negative/missing_condition_keyword.cedar
permit(principal, action, resource) { true };
